tarea 2, agrego imagenes y css

--- a/Tareas. Marianela Purretta/public/views/alfajores-de-maicena.html
+++ b/Tareas. Marianela Purretta/public/views/alfajores-de-maicena.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Alfajores de Maizena</title>
+     <title>Alfajores de Maicena</title>
 </head>
 
 </body>
-<h1>Receta de Alfajores de Maizena</h1>
+<h1>Receta de Alfajores de Maicena</h1>
 <p>descripcion de receta</p>
+<img src="./../img/alfajores de maicena.jpg" width="600" height="auto" alt="alfajores de maicena">
 <hr>
 <h2>Lista de ingredientes</h2>
 <ul>
@@ -38,6 +39,7 @@
     <li>Retirar del horno y dejar enfriar sobre una rejilla</li>
     <li>Una vez fríos, colocar dulce de leche en una tapa y por encima la otra. Pasar los bordes por Coco rallado Alicante y ya están listos para disfrutar.</li>
 </ol>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/ATIerXeAPts" title="ALFAJORES DE MAICENA - Alfajores Caseros #1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <a href=https://alicante.com.ar/receta/193-receta-alfajores-de-maicena/?gad_source=1&gclid=Cj0KCQjw3bm3BhDJARIsAKnHoVWTr8t7sIlmjiuDhNJzm8YSYeTFi5jfoBLt4QHFhJ4oeI4AWQf_0IAaAgtvEALw_wcB target="_blank">
     Tambien pudes leer esta receta en <strong>"Alicante"</strong>
     <br>
