--- a/Tareas. Marianela Purretta/public/views/arrozConPollo.html
+++ b/Tareas. Marianela Purretta/public/views/arrozConPollo.html
@@ -9,6 +9,7 @@
 </body>
 <h1>Receta de Arroz con Pollo</h1>
 <p>descripcion de receta</p>
+<img src="../img/arroz con pollo.jpg"  width="600" height="auto" alt="olla de arroz con pollo">
 <hr>
 <h2>Lista de ingredientes</h2>
 <ul>
@@ -33,6 +34,7 @@
     <li>Cocinar 16 minutos a fuego muy bajo. Cuando el arroz esté casi listo, añadir las arvejas y los morrones en tiras.</li>
     <li>Cocinar 2 minutos más, apagar, tapar y esperar 5 minutos para servir.</li>
 </ol>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/4vEcK1X6VcA" title="Mi receta de Arroz con Pollo paso a paso" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <a href="https://www.clarin.com/recetas/platos-principales/arroz-pollo_7_gXIr4qrQJ.html?srsltid=AfmBOoqKR-q2zjKun3GRV7p3jS-hLuDoxQ29FW134W03lL24eiLd7Jm9" target="_blank">
 Leer esta receta en <strong>"Clarin"</strong>
 </a>
@@ -41,7 +43,7 @@ Leer esta receta en <strong>"Clarin"</strong>
     Tambien la pudes leer en <strong>"Knorr"</strong>
 </a>
 <br>
- <a href="aljafores-de-maizena.html">
+ <a href="alfajores-de-maicena.html">
     Leer receta <em>Alfajores de Maizena</em>
  </a>
  <br>
