--- a/tarea 5/ejercicio 3/public/css/style.css
+++ b/tarea 5/ejercicio 3/public/css/style.css
@@ -14,18 +14,22 @@ body {
 
 .grid > * {
   background-color: #4D7298;
-  border: 2px solid #77A6B6;
-  border-radius: 0.5em;
+  border: 1px solid #77A6B6;
+  border-radius: 1em;
   color: #fff;
   padding: 50px;
-  font-size: 1vw;
+  font-size: 2vw;
+  
+ text-align: center; margin: 5px;
+
 }
 
 .item1, .item2, .item9 {
   text-transform: uppercase;
   text-align: center;
   text-decoration: underline;
-  font-size: 1vw;
+  font-size: 3vw;
+  text-align: center;
   background-color: red;
 }
 
@@ -42,12 +46,15 @@ body {
   grid-column-end: 4;
 }
 .item2 {
-  grid-row-start: 3;
+  grid-row-end: 5;
   grid-column-end: 4;
-  
+  grid-row-start: 3;
+  grid-column-start: 2
 }
 
 
 .item9 {
-  
+grid-column-start: 1;
+grid-row-start: 5;
+grid-row-end: 7;
 }
